results/SVCOMP/specgen/log-ExSymExe-2024_03_04_05_03_29.txt
class Main {

  static int field;

  //@ requires true;
  //@ ensures b == \old(b) + 1;
  //@ ensures a[0] ==> System.out.println("array0");
  //@ ensures a[1] ==> System.out.println("array1");
  public void testa(int b, boolean[] a) {
    b++;
    if (a[0]) System.out.println("array0");
    if (a[1]) System.out.println("array1");
  }

  //@ requires xm < ym && xm > ym;
  //@ ensures System.out.println("unreachable");
  //@ ensures \result == false;
  //@ ensures \result == true;
  public void test5(double xm, double ym) {
    if (xm < ym && xm > ym) {
      System.out.println("unreachable");
      assert (false);
    } else assert (true);
  }

  //@ requires Math.sin(x) + Math.cos(y) == 1;
  //@ ensures Math.sin(x) + Math.cos(y) == 1 ==> System.out.println("eq");
  //@ ensures Math.sin(x) + Math.cos(y) != 1 ==> System.out.println("neq");
  public void test3(double x, double y) {
    if (Math.sin(x) + Math.cos(y) == 1) System.out.println("eq");
    else System.out.println("neq");
  }

  //@ requires x > 0 && y > 0;
  //@ ensures \result == y + x || \result == y - x;
  public static int test4(int x, int y) {
    if (x > 0 && y > 0) {
      return y + x;
    } else {
      return y - x;
    }
  }

  //@ requires true;
  //@ ensures System.out.println("test1");
  //@ ensures z <= 1200 ==> System.out.println("le 1200");
  //@ ensures z >= 1200 ==> System.out.println("ge 1200");
  //@ ensures b ==> System.out.println("b true");
  //@ ensures !b ==> System.out.println("b false");
  public static void test1(int x, boolean b) {
    System.out.println("test1");
    Integer z = new Integer((int) x);
    if (z <= 1200) System.out.println("le 1200");
    if (z >= 1200) System.out.println("ge 1200");
    if (b) {
      System.out.println("b true");
    } else {
      System.out.println("b false");
    }
  }

  //@ requires true;
  //@ ensures x == \old(x) + z;
  //@ ensures x > z ==> System.out.println("br3");
  //@ ensures x <= z ==> System.out.println("br2");
  public void test(int x, int z) {
    // x = x >>> 1;
    x = x + z;
    if (x > z) {
      // if (z > x)
      System.out.println("unreachable");
      assert false;
    }
    if (x + 6 > 0) System.out.println("br3");
    else System.out.println("br2");
  }

  //@ requires true;
  //@ ensures System.out.println("in test2 " + x + " " + z);
  //@ ensures x == z && \result == z;
  //@ ensures z > 0 ==> System.out.println("branch2 FOO1");
  //@ ensures z <= 0 ==> System.out.println("branch2 FOO2");
  //@ ensures x > 0 ==> System.out.println("branch2 BOO1");
  //@ ensures x <= 0 ==> System.out.println("branch2 BOO2");
  public void test2(int x, int z) {
    System.out.println("in test2 " + x + " " + z);
    x = z++;
    // z=5;
    if (z > 0) {
      System.out.println("branch2 FOO1");
    } else System.out.println("branch2 FOO2");
    if (x > 0) System.out.println("branch2 BOO1");
    else System.out.println("branch2 BOO2");
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:7: error: incompatible types: void cannot be converted to boolean
  //@ ensures a[0] ==> System.out.println("array0");
                                         ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:8: error: incompatible types: void cannot be converted to boolean
  //@ ensures a[1] ==> System.out.println("array1");
                                         ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:16: error: incompatible types: void cannot be converted to boolean
  //@ ensures System.out.println("unreachable");
                                ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:17: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == false;
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:18: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == true;
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:27: error: incompatible types: void cannot be converted to boolean
  //@ ensures Math.sin(x) + Math.cos(y) == 1 ==> System.out.println("eq");
                                                                   ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:28: error: incompatible types: void cannot be converted to boolean
  //@ ensures Math.sin(x) + Math.cos(y) != 1 ==> System.out.println("neq");
                                                                   ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:45: error: incompatible types: void cannot be converted to boolean
  //@ ensures System.out.println("test1");
                                ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:46: error: cannot find symbol
  //@ ensures z <= 1200 ==> System.out.println("le 1200");
              ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:46: error: incompatible types: void cannot be converted to boolean
  //@ ensures z <= 1200 ==> System.out.println("le 1200");
                                              ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:47: error: cannot find symbol
  //@ ensures z >= 1200 ==> System.out.println("ge 1200");
              ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:47: error: incompatible types: void cannot be converted to boolean
  //@ ensures z >= 1200 ==> System.out.println("ge 1200");
                                              ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:48: error: incompatible types: void cannot be converted to boolean
  //@ ensures b ==> System.out.println("b true");
                                      ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:49: error: incompatible types: void cannot be converted to boolean
  //@ ensures !b ==> System.out.println("b false");
                                       ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:64: error: incompatible types: void cannot be converted to boolean
  //@ ensures x > z ==> System.out.println("br3");
                                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:65: error: incompatible types: void cannot be converted to boolean
  //@ ensures x <= z ==> System.out.println("br2");
                                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:79: error: incompatible types: void cannot be converted to boolean
  //@ ensures System.out.println("in test2 " + x + " " + z);
                                ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:80: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures x == z && \result == z;
                         ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:81: error: incompatible types: void cannot be converted to boolean
  //@ ensures z > 0 ==> System.out.println("branch2 FOO1");
                                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:82: error: incompatible types: void cannot be converted to boolean
  //@ ensures z <= 0 ==> System.out.println("branch2 FOO2");
                                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:83: error: incompatible types: void cannot be converted to boolean
  //@ ensures x > 0 ==> System.out.println("branch2 BOO1");
                                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe.java:84: error: incompatible types: void cannot be converted to boolean
  //@ ensures x <= 0 ==> System.out.println("branch2 BOO2");
                                           ^
Note: /home/max/Documents/JMLGPT/tmp/ExSymExe.java uses or overrides a deprecated API that is marked for removal.
Note: Recompile with -Xlint:removal for details.
22 errors

